--- a/ArtGallery-Backend/src/main/resources/application.properties
+++ b/ArtGallery-Backend/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=${PORT:8080}
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://ec2-54-156-53-71.compute-1.amazonaws.com:5432/decf577mgcg8kq
 spring.datasource.username=ktfrusegnilrvc
