--- a/ArtGallery-Backend/build.gradle
+++ b/ArtGallery-Backend/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
+	implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.133')
+	implementation 'com.amazonaws:aws-java-sdk-s3'
 	implementation('io.jsonwebtoken:jjwt:0.2')
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
