added gradle task for integration test

--- a/ArtGallery-Backend/build.gradle
+++ b/ArtGallery-Backend/build.gradle
@@ -33,3 +33,9 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+task integrationTest(type: Exec){
+	ignoreExitValue true
+
+	commandLine 'sh', "./integration_tests/integrationTest.sh"
+}
