--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,17 @@
 language: java
 script:
-- ./gradlew build --stacktrace
+  - ./gradlew build --stacktrace
+  - newman run ArtGallery-Backend/integration_tests/UserIntegrationTestCollection.json
+  - newman run ArtGallery-Backend/integration_tests/CognitoIntegrationTestCollection.json
+
+install:
+  - npm install -g newman
+
+before_script:
+  - node --version
+  - npm --version
+  - newman --version
+
+before_install:
+  - nvm install 10.2.0
+  - nvm use 10.2.0
