--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ script:
   - newman run ArtGallery-Backend/integration_tests/UserIntegrationTestCollection.json
   - newman run ArtGallery-Backend/integration_tests/CognitoIntegrationTestCollection.json
   - newman run ArtGallery-Backend/integration_tests/ArtGalleryIntegrationTestCollection.json
+  - newman run ArtGallery-Backend/integration_tests/ArtistIntegrationTestCollection.json
 
 install:
   - npm install -g newman
