--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ script:
   - newman run ArtGallery-Backend/integration_tests/CognitoIntegrationTestCollection.json
   - newman run ArtGallery-Backend/integration_tests/ArtGalleryIntegrationTestCollection.json
   - newman run ArtGallery-Backend/integration_tests/ArtistIntegrationTestCollection.json
+  - newman run ArtGallery-Backend/integration_tests/ArtworkIntegrationTestCollection.json
 
 install:
   - npm install -g newman
