--- a/ArtGallery-Frontend/package.json
+++ b/ArtGallery-Frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "latest",
     "jquery": "^3.5.1",
+    "mdbvue": "^6.7.1",
     "popper.js": "^1.12.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
