--- a/ArtGallery-Frontend/package.json
+++ b/ArtGallery-Frontend/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "artgallery-frontend",
+  "name": "art-gallery-frontend-06",
   "version": "1.0.0",
   "description": "A Vue.Js frontend for art gallery application",
   "author": "chaggysen <sen.wang@mail.mcgill.ca>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
+    "start": "node server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
@@ -15,7 +15,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bootstrap": "^4.0.0-beta.2",
-    "bootstrap-vue": "latest",
+    "bootstrap-vue": "^2.19.0",
     "jquery": "^3.5.1",
     "mdbvue": "^6.7.1",
     "popper.js": "^1.12.9",
@@ -41,7 +41,7 @@
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
