--- a/ArtGallery-Android/app/build.gradle
+++ b/ArtGallery-Android/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
