--- a/ArtGallery-Android/app/src/main/AndroidManifest.xml
+++ b/ArtGallery-Android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidArtGallery">
-        <activity android:name=".Browse"></activity>
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".Browse" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
