--- a/ArtGallery-Android/app/src/main/AndroidManifest.xml
+++ b/ArtGallery-Android/app/src/main/AndroidManifest.xml
@@ -11,11 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidArtGallery">
-        <activity android:name=".BrowseActivity"></activity>
-        <activity android:name=".ViewArtworkActivity"></activity>
-        <activity android:name=".BuyArtworkActivity"></activity>
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".EditArtworkActivity"></activity>
+        <activity android:name=".BrowseActivity" />
+        <activity android:name=".ViewArtworkActivity" />
+        <activity android:name=".BuyArtworkActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
